Tweak light mode link color

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -44,7 +44,7 @@
 
     --col-link-fg: #1a4cff;
     --col-link-fg-visit: #0f2dd2;
-    --col-link-bg: #e0ecff;
+    --col-link-bg: #b9d2e7;
     --col-link-shadow: transparent;
 
     --col-brand-1: hsl(105, 70%, 51%);
