Always append site name to page title

--- a/src/modules/layouts/Base.astro
+++ b/src/modules/layouts/Base.astro
@@ -4,11 +4,12 @@ import Style from "$part/Style.astro";
 import type { HTMLAttributes } from "astro/types";
 
 interface Props extends HTMLAttributes<"body"> {
-  title: string;
+  name: string;
   description: string;
 }
 
-const { title, description, ...attrs } = Astro.props;
+const { name, description, ...attrs } = Astro.props;
+const title = `${name} | thegatesdev`;
 ---
 
 <html lang="en">
