Update index page title and description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import IconYouTube from "$icon/youtube.svg";
 ---
 
 <Base
+  name="Landing"
   class="page-index"
-  title="thegates.dev"
-  description="Homepage of thegatesdev"
+  description="The personal website of Tim (thegatesdev)."
 >
   <header>
     <ul class="page-index-navlist" role="list">
