Move component styles to one CSS sheet

--- a/src/modules/parts/Style.astro
+++ b/src/modules/parts/Style.astro
@@ -3,6 +3,7 @@ import "$style/reset.css";
 import "$style/theme.css";
 import "$style/font.css";
 import "$style/base.css";
+import "$style/components.css";
 ---
 
 <script is:inline>
