--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -22,6 +22,7 @@
     --radius-1: 4px;
     --space-section-1: 0.9rem;
     --space-section-2: 1.2rem;
+    --space-section-3: 1.5rem;
     --space-comp-1: 0.4rem;
     --space-comp-2: 0.7rem;
     --space-comp-3: 1rem;
@@ -53,6 +54,7 @@
     --radius-1: 4px;
     --space-section-1: 0.9rem;
     --space-section-2: 1.2rem;
+    --space-section-3: 1.5rem;
     --space-comp-1: 0.4rem;
     --space-comp-2: 0.7rem;
     --space-comp-3: 1rem;
