--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2,7 +2,7 @@
   :root[data-theme="dark"] {
     color-scheme: dark;
 
-    --col-fg: #dedee0;
+    --col-fg: hsl(240, 3%, 78%);
     --col-fg-active: #ffffff;
     --col-fg-fade-1: #c0c0c2;
     --col-fg-fade-2: #a2a2a4;
