Change landing quote

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import IconYouTube from "$icon/youtube.svg";
   <main>
     <h1 class="title">Tim</h1>
     <p class="page-index-tag subtitle">@thegatesdev</p>
-    <q>In programming, fun and frustration are one</q>
+    <q>Show me your code, and I'll tell you who you are</q>
   </main>
   <div class="page-index-below">
     <div></div>
