Add post page padding

--- a/src/pages/posts/[id].astro
+++ b/src/pages/posts/[id].astro
@@ -35,6 +35,7 @@ const { Content } = await render(post);
   .page-post {
     max-width: 50rem;
     margin: 0 auto;
+    padding: 1rem;
   }
   .page-post main {
     margin-top: var(--space-section-2);
