Landing link to home post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import IconYouTube from "$icon/youtube.svg";
   </main>
   <div class="page-index-below">
     <div></div>
-    <nav><a href="/home">Continue &rarr;</a></nav>
+    <nav><a href="/posts/home">Continue &rarr;</a></nav>
     <footer>
       Built with <a href="">Astro</a> |
       <a href="">Source</a>
