Nav button fade less and use active style for hover

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -32,10 +32,10 @@
   .navbutton {
     text-decoration: none;
     font-weight: bold;
-    color: var(--col-fg-fade-2);
+    color: var(--col-fg-fade-1);
     background: transparent;
   }
   .navbutton:hover {
-    color: var(--col-fg);
+    color: var(--col-fg-active);
   }
 }
