Make continue button a nav button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import IconYouTube from "$icon/youtube.svg";
   </main>
   <div class="page-index-below">
     <div></div>
-    <nav><a href="/posts/home">Continue &rarr;</a></nav>
+    <nav><a class="navbutton" href="/posts/home">Continue &rarr;</a></nav>
     <footer>
       Built with <a href="">Astro</a> |
       <a href="">Source</a>
@@ -56,9 +56,5 @@ import IconYouTube from "$icon/youtube.svg";
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
-  .page-index-below a {
-    color: var(--col-fg);
   }
 </style>
