--- a/src/modules/parts/Navigation.astro
+++ b/src/modules/parts/Navigation.astro
@@ -1,8 +1,12 @@
+---
+import NavLink from "$comp/NavLink.astro";
+---
+
 <nav class="navigation">
   <ol class="navigation-list" role="list">
-    <li><a href="/posts/home">Home</a></li>
-    <li><a href="/posts">All Posts</a></li>
-    <li><a href="/topics/blog">Blog</a></li>
+    <NavLink href="/posts/home">Home</NavLink>
+    <NavLink href="/posts">All Posts</NavLink>
+    <NavLink href="/topics/blog">Blog</NavLink>
   </ol>
 </nav>
 
