Reduce light brand 2 color

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -18,7 +18,7 @@
 
     --col-brand-1: #8ec73d;
     --col-brand-2: #1d93e7;
-    --col-brand-2-light: #4fcff3;
+    --col-brand-2-light: #36B1ED;
 
     --radius-1: 4px;
     --space-section-1: 0.9rem;
