--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -3,7 +3,7 @@ import Page from "$layout/Page.astro";
 import PostList from "$part/PostList.astro";
 import { getCollection } from "astro:content";
 
-const posts = (await getCollection("post")).sort(
+const posts = (await getCollection("post", (post) => !post.data.special)).sort(
   (a, b) => {
     const featured = (b.data.featured ?? 0) - (a.data.featured ?? 0);
     const time = b.data.published.getTime() - a.data.published.getTime();
@@ -14,6 +14,6 @@ const posts = (await getCollection("post")).sort(
 
 <Page name="All Posts" description="View all posts by thegatesdev">
   <h1>All Posts</h1>
-  <br>
+  <br />
   <PostList {posts} />
 </Page>
