--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -20,16 +20,27 @@
     color: var(--col-fg-active);
   }
 
+  @property --gradient-angle {
+    syntax: '<angle>';
+    initial-value: 45deg;
+    inherits: false;
+  }
+
   .page-index-tag,
   .header-tag {
     color: transparent;
     background-color: var(--col-fg);
     background-image: linear-gradient(
-      45deg,
+      var(--gradient-angle),
       var(--col-brand-1),
       var(--col-brand-2)
     );
     background-clip: text;
+    transition: --gradient-angle 1s ease-out;
+  }
+  .page-index-tag:hover,
+  .header-tag:hover {
+    --gradient-angle: 270deg;
   }
 
   .navbutton {
