Rework topic system to tags, clean unused collections

--- a/src/modules/parts/PostCard.astro
+++ b/src/modules/parts/PostCard.astro
@@ -14,7 +14,7 @@ const href = `/posts/${post.id}`;
 <article class="post-card">
   <header>
     <a {href}><h3>{title}</h3></a>
-    <p><PostMeta {post} /></p>
+    <PostMeta {post} />
   </header>
   <p>{description}</p>
 </article>
