--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -2,18 +2,15 @@
 import Page from "$layout/Page.astro";
 import PostList from "$part/PostList.astro";
 import { getCollection } from "astro:content";
+import { viewPostFilter, viewPostSort } from "src/content.lib";
 
-const posts = (await getCollection("post", (post) => !post.data.special)).sort(
-  (a, b) => {
-    const featured = (b.data.featured ?? 0) - (a.data.featured ?? 0);
-    const time = b.data.published.getTime() - a.data.published.getTime();
-    return featured || time;
-  },
-);
+const posts = (await getCollection("post"))
+  .filter(viewPostFilter)
+  .sort(viewPostSort);
 ---
 
 <Page name="All Posts" description="View all posts by thegatesdev">
-  <h1>All Posts</h1>
+  <h2>Featured</h2>
   <br />
   <PostList {posts} />
 </Page>
