Add recommended tags to navigation

--- a/src/modules/parts/Navigation.astro
+++ b/src/modules/parts/Navigation.astro
@@ -6,9 +6,11 @@ import NavLink from "$comp/NavLink.astro";
   <ol class="navigation-list" role="list">
     <NavLink href="/posts/home">Home</NavLink>
     <NavLink href="/posts">All Posts</NavLink>
-    <NavLink href="/topics">All Topics</NavLink>
-    <br>
-
+    <NavLink href="/tags">All Tags</NavLink>
+    <br />
+    <NavLink href="/tags/about">#about</NavLink>
+    <NavLink href="/tags/blog">#blog</NavLink>
+    <NavLink href="/tags/art">#art</NavLink>
   </ol>
 </nav>
 
