--- a/src/modules/parts/Navigation.astro
+++ b/src/modules/parts/Navigation.astro
@@ -3,11 +3,12 @@ import NavLink from "$comp/NavLink.astro";
 ---
 
 <nav class="navigation">
-  <ol class="navigation-list" role="list">
+  <ol role="list">
     <NavLink href="/posts/home">Home</NavLink>
     <NavLink href="/posts">All Posts</NavLink>
     <NavLink href="/tags">All Tags</NavLink>
-    <br />
+  </ol>
+  <ol role="list">
     <NavLink href="/tags/about">#about</NavLink>
     <NavLink href="/tags/blog">#blog</NavLink>
     <NavLink href="/tags/art">#art</NavLink>
@@ -15,7 +16,11 @@ import NavLink from "$comp/NavLink.astro";
 </nav>
 
 <style is:global>
-  .navigation-list {
+  .navigation {
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-section-2);
+
     text-align: right;
     min-width: max-content;
   }
