--- a/src/modules/layouts/Page.astro
+++ b/src/modules/layouts/Page.astro
@@ -35,5 +35,9 @@ const {name, description, ...attrs} = Astro.props;
   }
   .page-split main {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-section-1);
   }
 </style>
