--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -10,7 +10,6 @@ const posts = (await getCollection("post"))
 ---
 
 <Page name="All Posts" description="View all posts by thegatesdev">
-  <h2>Featured</h2>
-  <br />
+  <h2>All Posts</h2>
   <PostList {posts} />
 </Page>
