--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -4,9 +4,7 @@ import PostList from "$part/PostList.astro";
 import { getCollection } from "astro:content";
 import { viewPostFilter, viewPostSort } from "src/content.lib";
 
-const posts = (await getCollection("post"))
-  .filter(viewPostFilter)
-  .sort(viewPostSort);
+const posts = (await getCollection("post", viewPostFilter)).sort(viewPostSort);
 ---
 
 <Page name="All Posts" description="View all posts by thegatesdev">
