--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,8 +11,7 @@ import Base from "$layout/Base.astro";
     <details>
       <summary>I expected something here</summary>
       I probably messed up. Tell me about it.<br />
-      I mean, really do tell me about it,
-      preferably over on the
+      I mean, really do tell me about it, preferably over on the
       <a href="https://github.com/thegatesdev/thegates.dev/issues"
         >GitHub issue tracker</a
       >.
