--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,11 +12,11 @@ import IconYouTube from "$icon/youtube.svg";
 >
   <header>
     <ul class="page-index-navlist" role="list">
-      <Refer href="/">
+      <Refer href="https://github.com/thegatesdev">
         <IconGithub slot="icon" />
         GitHub
       </Refer>
-      <Refer href="/">
+      <Refer href="https://www.youtube.com/@thegatesdev">
         <IconYouTube slot="icon" />
         YouTube
       </Refer>
@@ -31,8 +31,8 @@ import IconYouTube from "$icon/youtube.svg";
     <div></div>
     <nav><a class="navbutton" href="/posts/home">Continue &rarr;</a></nav>
     <footer>
-      Built with <a href="">Astro</a> |
-      <a href="">Source</a>
+      Built with <a href="https://astro.build">Astro</a> |
+      <a href="https://github.com/thegatesdev/thegates.dev">Source</a>
     </footer>
   </div>
 </Base>
