Pad bottom of page layout

--- a/src/modules/layouts/Page.astro
+++ b/src/modules/layouts/Page.astro
@@ -25,6 +25,7 @@ const {name, description, ...attrs} = Astro.props;
     max-width: 50rem;
     margin: 0 auto;
     padding: 1rem;
+    padding-bottom: 20vh;
   }
   .page-split {
     margin-top: var(--space-section-3);
