--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,7 +1,9 @@
 @layer base {
-  html,
-  body {
+  html {
     height: 100%;
+  }
+  body {
+    min-height: 100%;
   }
   html {
     background-color: var(--col-bg);
