--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,9 +1,9 @@
 @layer base {
-  html,
   body {
-    height: 100%;
+    min-height: 100%;
   }
   html {
+    height: 100%;
     overflow: hidden scroll;
     scrollbar-width: thin;
     scrollbar-color: var(--col-fg-fade-1) var(--col-bg-fade-2);
