--- a/src/modules/parts/PostContent.astro
+++ b/src/modules/parts/PostContent.astro
@@ -18,7 +18,7 @@ const next = nextRef && (await getEntries(nextRef));
 
 <header>
   <h1>{title}</h1>
-  <PostMeta {post} />
+  <PostMeta {post} showFeatured={true} />
 </header>
 <Content />
 {
