Append posts to make current page clear

--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -14,8 +14,8 @@ normal.sort(sortPostsByPublished);
 ---
 
 <Page name="All Posts" description="View all posts by thegatesdev">
-  <h3>&#10024;Featured</h3>
+  <h3>&#10024;Featured posts</h3>
   <PostList posts={featured} />
-  <h3>Recent</h3>
+  <h3>Recent posts</h3>
   <PostList posts={normal} />
 </Page>
