--- a/src/modules/layouts/Page.astro
+++ b/src/modules/layouts/Page.astro
@@ -24,8 +24,7 @@ const { name, description, ...attrs } = Astro.props;
   .page {
     max-width: 50rem;
     margin: 0 auto;
-    padding: 1rem;
-    padding-bottom: 20vh;
+    padding: 1rem 1rem 10vh;
 
     display: flex;
     flex-direction: column;
@@ -48,7 +47,7 @@ const { name, description, ...attrs } = Astro.props;
       flex-direction: column;
     }
     .page {
-      padding: 0.3rem;
+      padding: 0.3rem 0.3rem 10vh;
       row-gap: var(--space-section-1);
     }
   }
