Cut off page x overflow

--- a/src/modules/layouts/Page.astro
+++ b/src/modules/layouts/Page.astro
@@ -37,6 +37,7 @@ const { name, description, ...attrs } = Astro.props;
   }
   .page-split main {
     flex: 1;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
