Fix overflow scrollbar

--- a/src/modules/layouts/Page.astro
+++ b/src/modules/layouts/Page.astro
@@ -37,7 +37,8 @@ const { name, description, ...attrs } = Astro.props;
   }
   .page-split main {
     flex: 1;
-    overflow-x: hidden;
+    overflow: hidden;
+    padding-bottom: 1rem;
 
     display: flex;
     flex-direction: column;
