Rename component styles to modules

--- a/src/modules/parts/Style.astro
+++ b/src/modules/parts/Style.astro
@@ -4,7 +4,7 @@ import "$style/theme.css";
 import "$style/font.css";
 import "$style/base.css";
 import "$style/astro.css";
-import "$style/components.css";
+import "$style/modules.css";
 ---
 
 <script is:inline>
