Back to square one

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,7 +1,7 @@
 ---
-import BaseHead from "$part/BaseHead.astro";
-import Style from "$part/Style.astro";
 import type { HTMLAttributes } from "astro/types";
+import BaseHead from "$mod/BaseHead.astro";
+import Style from "$mod/Style.astro";
 
 interface Props extends HTMLAttributes<"body"> {
   name: string;
