--- a/src/styles/global/theme.css
+++ b/src/styles/global/theme.css
@@ -18,7 +18,7 @@
 
     --col-brand-1: #8ec73d;
     --col-brand-2: #1d93e7;
-    --col-brand-2-light: #36B1ED;
+    --col-brand-2-light: #36b1ed;
 
     --radius-1: 4px;
     --space-section-1: 1.2rem;
