--- a/src/modules/Style.astro
+++ b/src/modules/Style.astro
@@ -1,9 +1,9 @@
 ---
-import "$style/reset.css";
-import "$style/theme.css";
-import "$style/font.css";
-import "$style/base.css";
-import "$style/astro.css";
+import "$style/global/reset.css";
+import "$style/global/theme.css";
+import "$style/global/font.css";
+import "$style/global/base.css";
+import "$style/layouts.css";
 import "$style/modules.css";
 ---
 
